# rust-vdb

./: .gitignore  Cargo.toml  Secrets.example.toml
kb/internal/: november.mdx
src/: contents.rs  error.rs  finder.rs  llm.rs  main.rs  vector.rs
static/: index.html
