[package]
name = 'rust-vdb'
version = '0.1.0'
edition = '2021'
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = '0.20.0'
shuttle-axum = '0.20.0'
shuttle-static-folder = '0.20.0'
shuttle-secrets = '0.20.0'

tokio = '1.28.2'
tokio-stream = '0.1.14'
tower-http = { version = '0.4.1', features = ['fs'] }

axum = '0.6.18'
axum-macros = '0.3.7'
axum-streams = { version = '0.8.2', features = ['text'] }

serde = { version = '1.0.164', features = ['serde_derive']}
serde_json = '1.0.99'

futures = '0.3.28'
anyhow = '1.0.71'
uuid = '1.3.4'

qdrant-client ='1.2.0'
openai = "1.0.0-alpha.12"
